fr-sonic/include/frsonic.h

struct wireplumber_object;
struct Props;
struct ParamUpdate;
/* ── callback types ──────────────────────────────────────────────────────── */

using node_added_callback_t = void (*)(const wireplumber_object *node);
using props_changed_callback_t = void (*)(const Props *props,
                                          const ParamUpdate *param_update);
using props_enum_failed_callback_t = void (*)(uint64_t object_serial);
using prop_info_added_callback_t = void (*)(const char *property_infos_json);
using object_deleted_callback_t = void (*)(uint64_t object_serial,
                                           wireplumber_object_type type);
using metadata_added_callback_t = void (*)(const char *metadata_name);
using metadata_entry_updated_callback_t = void (*)(const char *metadata_name,
                                                   uint64_t subject,
                                                   const char *key,
                                                   const char *type,
                                                   const char *value);
using metadata_entry_deleted_callback_t = void (*)(const char *metadata_name,
                                                   uint64_t subject,
                                                   const char *key);
/* monitoring */
using peak_callback_t = void (*)(uint64_t object_serial, float left_peak,
                                 float right_peak, float left_average,
                                 float right_average);
using layer_select_callback_t = void (*)(size_t layer_id);
using channel_select_callback_t = void (*)(ChannelType channel_type,
                                           size_t channel_id);
using dial_mode_callback_t = void (*)(ChannelType channel_type,
                                      size_t channel_id, DialMode dial_mode);
using filter_section_callback_t = void (*)(ChannelType channel_type,
                                           size_t channel_id,
                                           size_t section_id);
using pages_right_callback_t = void (*)(uint64_t step_count);
using pages_left_callback_t = void (*)(uint64_t step_count);
using midi_cc_update_callback_t =
    void (*)(ChannelType channel_type, uint64_t channel_id, uint64_t object_id,
             const char *parameter_name, float normalized_value,
             float normalized_known_value, bool catching_up);
using launchpad_loop_pressed_callback_t =
    void (*)(size_t layer_id, ChannelType channel_type, size_t channel_id,
             size_t loop_position);
using launchpad_fader_changed_callback_t =
    void (*)(size_t layer_id, ChannelType channel_type, size_t channel_id,
             float normalized_value);
FRSONIC_API void frsonic_add_filter_parameter(ChannelType channel_type,
                                              size_t channel_id,
                                              size_t plugin_id, char *name,
                                              float min, float max);
FRSONIC_API void frsonic_set_launchpad_mini_looper_slot_state(
    ChannelType channel_type, size_t channel_id, size_t loop_position,
    bool available, bool loaded, bool playing);
/* ── lv2 ─────────────────────────────────────────────────────────────────── */
FRSONIC_API void frsonic_lv2_init();
FRSONIC_API void frsonic_lv2_destroy();
FRSONIC_API const char *frsonic_lv2_plugin_descriptions_json();
FRSONIC_API const char *frsonic_lv2_plugin_classes_json();
/* ── silence producers ───────────────────────────────────────────────────── */
FRSONIC_API void *frsonic_create_silence_producer(uint64_t target_serial);
FRSONIC_API void frsonic_destroy_silence_producer(void *handle);