Fr.Sonic/PInvoke/FrSonicLib.cs


    [LibraryImport(
        LIB,
        EntryPoint = "frsonic_add_filter_parameter",
        StringMarshalling = StringMarshalling.Utf8
    )]
    internal static partial void AddFilterParameterC(
        ChannelType channelType,
        ulong channelId,
        ulong pluginId,
        string name,
        float min,
        float max
    );

    [LibraryImport(LIB, EntryPoint = "frsonic_set_launchpad_mini_looper_slot_state")]
    internal static partial void SetLaunchpadMiniLooperSlotStateC(
        ChannelType channelType,
        ulong channelId,
        ulong loopPosition,
        [MarshalAs(UnmanagedType.U1)] bool available,
        [MarshalAs(UnmanagedType.U1)] bool loaded,
        [MarshalAs(UnmanagedType.U1)] bool playing
    );

    /* silence producers */
    [LibraryImport(LIB, EntryPoint = "frsonic_create_silence_producer")]
    internal static partial IntPtr CreateSilenceProducerC(ulong targetSerial);

    [LibraryImport(LIB, EntryPoint = "frsonic_destroy_silence_producer")]
    internal static partial void DestroySilenceProducerC(IntPtr handle);

    /* lv2 */
    [LibraryImport(LIB, EntryPoint = "frsonic_lv2_init")]
    internal static partial void Lv2InitC();

    [LibraryImport(LIB, EntryPoint = "frsonic_lv2_destroy")]
    internal static partial void Lv2DestroyC();

    [LibraryImport(LIB, EntryPoint = "frsonic_lv2_plugin_descriptions_json")]
    internal static partial IntPtr Lv2PluginDescriptionsJsonC();

    [LibraryImport(LIB, EntryPoint = "frsonic_lv2_plugin_classes_json")]
    internal static partial IntPtr Lv2PluginClassesJsonC();
}
